# assignment-2-xeavveed

./: pyproject.toml  server_ip.py
src/: main.py
src/auth/: router.py
src/users/: errors.py  router.py  schemas.py
